SDEV-1556: do not recommend pre-release versions (#12800)